--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 
         <meta content='width=device-width, initial-scale=1.0' name='viewport' />
         <link href='stylesheets/style.css' rel='stylesheet' />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav>
+            <input placeholder="Buscar participantes"/>
             <div class="logo">
                 <img src="./img/rupaul.png"/>
             </div>
         </nav>
+
+        <div class="contenedor">
+
+        </div>
 
     </body>
