--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 
 <html class='no-js' lang='en'>
-    <head>
-        <meta charset='utf-8' />
-        <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-        <link rel="shortcut icon" href="./img/m.bmp">
-        <title>RuPaul´s Drag Race Contestants</title>
+  <head>
+    <meta charset='utf-8' />
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+    <link rel="shortcut icon" href="./img/m.bmp">
+    <title>RuPaul´s Drag Race Contestants</title>
 
-        <meta content='width=device-width, initial-scale=1.0' name='viewport' />
-        <link href='stylesheets/style.css' rel='stylesheet' />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <nav>
-            <input placeholder="Buscar participantes"/>
-            <div class="logo">
-                <img src="./img/rupaul.png"/>
-            </div>
-        </nav>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport' />
+    <link href='stylesheets/style.css' rel='stylesheet' />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	</head>
+	
+  <body>
+    <nav>
+      <input placeholder="Search for a queen or a season"/>
+      <div class="logo">
+        <img src="./img/rupaul.png"/>
+      </div>
+    </nav>
 
-        <div class="contenedor">
+    <div class="contenedor">   
+      <ul class="botonera">
+        <li>all queens</li>
+        <li>winners queens</li>
+			</ul>
+			
+			<div class="cadaSeason">
+				<div class="titulo">
+					<h1>season 1</h1>
+				</div>
+			</div>
 
-        </div>
+    </div>
 
-    </body>
+  </body>
