--- a/index.html
+++ b/index.html
@@ -20,17 +20,30 @@
       </div>
     </nav>
 
-    <div class="contenedor">   
+    <div class="fondo">   
       <ul class="botonera">
         <li>all queens</li>
         <li>winners queens</li>
 			</ul>
-			
-			<div class="cadaSeason">
-				<div class="titulo">
-					<h1>season 1</h1>
-				</div>
+
+			<div class="seasons">
+					<h2>season 1</h2>
 			</div>
+			
+					<!-- <nav>
+							<h2>Popular Movies</h2>
+							<h3 onclick="pop()">view all →</h3>
+							</nav>
+	
+							<ul>
+									<li class="pelis"></li>
+									<li class="pelis"></li>
+									<li class="pelis"></li>
+									<li class="pelis"></li>
+									<li class="pelis quinta"></li>
+							</ul>
+			</div> -->
+
 
     </div>
 
