--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
 
 			<div class="seasons">
 					<h2>season 1</h2>
+
+					<ul class="participantes">
+						<li class="cadaParticipante">
+							<img src="./img/pruebafoto.jpg"/>
+							<p class="nombre">Nombre</p>
+						</li>
+						<li class="cadaParticipante">
+							<img src="./img/pruebafoto.jpg"/>
+							<p class="nombre">Nombre</p>
+						</li>
+						<li class="cadaParticipante">
+							<img src="./img/pruebafoto.jpg"/>
+							<p class="nombre">Nombre</p>
+						</li>
+						<li class="cadaParticipante">
+							<img src="./img/pruebafoto.jpg"/>
+							<p class="nombre">Nombre</p>
+						</li>
+						<li class="cadaParticipante">
+							<img src="./img/pruebafoto.jpg"/>
+							<p class="nombre">Nombre</p>
+						</li>
+					</ul>
 			</div>
 			
 					<!-- <nav>
