--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <li>winners queens</li>
 			</ul>
 
-			<div class="seasons">
+			<div class="temporadas">
+
+				<div class="cadaTemporada">
 					<h2>season 1</h2>
 
 					<ul class="participantes">
@@ -51,21 +53,271 @@
 							<p class="nombre">Nombre</p>
 						</li>
 					</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 2</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 3</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 4</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 5</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 6</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 7</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 8</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 9</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 10</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+				<div class="cadaTemporada">
+						<h2>season 11</h2>
+	
+						<ul class="participantes">
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+							<li class="cadaParticipante">
+								<img src="./img/pruebafoto.jpg"/>
+								<p class="nombre">Nombre</p>
+							</li>
+						</ul>
+				</div>
+			
 			</div>
 			
-					<!-- <nav>
-							<h2>Popular Movies</h2>
-							<h3 onclick="pop()">view all →</h3>
-							</nav>
-	
-							<ul>
-									<li class="pelis"></li>
-									<li class="pelis"></li>
-									<li class="pelis"></li>
-									<li class="pelis"></li>
-									<li class="pelis quinta"></li>
-							</ul>
-			</div> -->
+
 
 
     </div>
