--- a/index.html
+++ b/index.html
@@ -316,10 +316,8 @@
 				</div>
 			
 			</div>
-			
-
-
-
-    </div>
+		</div>
+		
+		<script src="./javascript/javaScript.js" type="text/javascript"></script>  
 
   </body>
