--- a/index.html
+++ b/index.html
@@ -22,301 +22,19 @@
 
     <div class="fondo">   
       <ul class="botonera">
-        <li>all queens</li>
-        <li>winners queens</li>
+        <li>miss congeniality</li>
+        <li>winners</li>
 			</ul>
 
-			<div class="temporadas">
+			<div class="cadaTemporada">
+				<h2>all queens</h2>
 
-				<div class="cadaTemporada">
-					<h2>season 1</h2>
-
-					<ul class="participantes">
-						<li class="cadaParticipante">
-							<img src="./img/pruebafoto.jpg"/>
-							<p class="nombre">Nombre</p>
-						</li>
-						<li class="cadaParticipante">
-							<img src="./img/pruebafoto.jpg"/>
-							<p class="nombre">Nombre</p>
-						</li>
-						<li class="cadaParticipante">
-							<img src="./img/pruebafoto.jpg"/>
-							<p class="nombre">Nombre</p>
-						</li>
-						<li class="cadaParticipante">
-							<img src="./img/pruebafoto.jpg"/>
-							<p class="nombre">Nombre</p>
-						</li>
-						<li class="cadaParticipante">
-							<img src="./img/pruebafoto.jpg"/>
-							<p class="nombre">Nombre</p>
-						</li>
-					</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 2</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 3</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 4</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 5</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 6</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 7</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 8</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 9</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 10</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-				<div class="cadaTemporada">
-						<h2>season 11</h2>
-	
-						<ul class="participantes">
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-							<li class="cadaParticipante">
-								<img src="./img/pruebafoto.jpg"/>
-								<p class="nombre">Nombre</p>
-							</li>
-						</ul>
-				</div>
-			
+				<ul class="participantes">
+				</ul>
 			</div>
-		</div>
+			
+	</div>
+
 		
 		<script src="./javascript/javaScript.js" type="text/javascript"></script>  
 
